# libpeg

./: CMakeLists.txt  LICENSE  README.md
src/: opcode.h  types.h  vm.c  vm.h
tests/: CMakeLists.txt  test_vm_0001.c  test_vm_0002.c  tinytest.h
